# Rigorous-Reviewer

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  VALIDATION_REPORT.md  pyproject.toml  requirements-dev.txt
.github/workflows/: validate.yml
benchmarks/: benchmark_results.json  leaderboard.md
benchmarks/fixtures/: claim_strength_fixture.json
benchmarks/v1.0/: expected_findings.json  scoring_rubric.json
benchmarks/v1.1-public/: README.md  expected_findings.json  scoring_rubric.json  sources.json
docs/: README.md  agent_compatibility_matrix.md  trigger_keyword_support.md
docs/compatibility/: agent_matrix.md
docs/routing/: trigger_keyword_support.md
rigorous-reviewer/: SKILL.md
rigorous-reviewer/agents/: openai.yaml
rigorous-reviewer/examples/: full_review_example.md  issue_block_examples.md
rigorous-reviewer/references/: agent_behavior_core.md  article_specific_literature_mapping.md  calibration_protocol.md  chinese_researcher_mode.md  claim_maturity_gate.md  cns_reviewer_requirements.md  cross_skill_claim_readout_handoff.md  evidence_audit_and_source_policy.md  evidence_isolation_policy.md  external_scientific_skills_bridge.md  failure_mode_playbook.md  figure_claim_audit.md  final_verification_contract.md  issue_traceability_and_scope_discipline.md  manuscript_rhetoric_vs_evidence.md  (+14 more)
tests/: test_benchmark_scoring.py  test_claim_strength_fixture.py  test_installable_skill.py  test_review_contract.py  test_semantic_benchmark_scoring.py  test_trigger_keywords.py  test_validators.py
(+52 files in other folders)
