[project]
name = "rigorous-reviewer-skill"
version = "2.0.0"
description = "Portable agent skill for rigorous scientific peer review with benchmark, schema, and installability checks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Felix-owo" }]
keywords = ["agent-skill", "peer-review", "scientific-review", "benchmark", "schema-validation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "jsonschema>=4.22",
  "PyYAML>=6.0",
  "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
